Refactor to serve from express server

--- a/public/login.html
+++ b/public/login.html
@@ -31,7 +31,7 @@
     </div>
 </nav>
 <body class="text-dark bg-white">
-    <form class="form-container">
+    <form action="/login" method="POST" class="form-container">
         <div class="text-center">
             <h1>Sign In</h1>
         </div>
