--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Login</title>
+    <title>Sheet Music Home</title>
 </head>
 <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3">
     <div class="container">
-        <a class="navbar-brand" href="./Index.html">Sheet Music</a>
+        <a class="navbar-brand" href="./index.html">Sheet Music</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./Index.html">Home</a>
+                    <a class="nav-link" href="./index.html">Home</a>
                 </li>
             </ul>
             <div>
@@ -33,11 +33,20 @@
 <body class="text-dark bg-white">
     <div class="container">
         <h1>Home</h1>
+
+        <div class="videos">
+            <h3>Trending</h3>
+            <iframe id="v1" width="420" height="315" src="https://www.youtube.com/embed/rmCXZ8ECRdE">
+            </iframe>
+            <iframe id="v2" width="420" height="315" src="https://www.youtube.com/embed/BDZBmD62W_0">
+            </iframe>
+        </div>
     </div>
 </body>
 <footer class="border-top footer text-muted box-shadow bg-light">
     <div class="container">
         <p>2020 &copy; Sheet Music</p>
+        
     </div>
 </footer>
 
