--- a/login.html
+++ b/login.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Login</title>
+    <title>Sheet Music Login</title>
 </head>
 <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3">
     <div class="container">
-        <a class="navbar-brand" href="./Index.html">Sheet Music</a>
+        <a class="navbar-brand" href="./index.html">Sheet Music</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./Index.html">Home</a>
+                    <a class="nav-link" href="./index.html">Home</a>
                 </li>
             </ul>
             <div>
