--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                 </li>
             </ul>
             <div>
-                <a class="float-right" href="./login.html">Sign In</a>
+                <a class="float-right" href="./login">Sign In</a>
             </div>
         </div>
     </div>
