--- a/public/piece.html
+++ b/public/piece.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Sheet Music Home</title>
+    <title>Piece Info</title>
 </head>
 <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3">
     <div class="container">
@@ -32,29 +32,24 @@
 </nav>
 <body class="text-dark bg-white">
     <div class="container">
-        <h1 class="text-center">Sheet Music</h1>
+        <h1 id="piece-name" class="text-center">Piece Name</h1>
         <br /><br />
-        <div class="col-8 offset-2">
-            <form method="POST">
-                <div class="row">
-                    <input type="text" class="form-control col-8" placeholder="Sheet, composer, piece...">
-                    <button type="submit" class="btn btn-primary col-3 offset-1">Search</button>
-                </div>
-            </form>
+        <div class="row">
+            <embed id="pdf" src= "./pdf/Friends-Sheet-Music-Anne-Marie-(SheetMusic-Free-com).pdf" width= "500" height= "600">
+            <ul id="list" style="list-style-type:square">
+                <li id="cpser">Composer: </li>
+                <li>Time uploaded: </li>
+                <li>Tags: </li>
+                <li>Stars: </li>
+                <li>Copyright: </li>
+            </ul>
         </div>
-        <div class="videos">
-            <h3 id="trend" class="text-center">Trending</h3>
-            <div class="text-center">
-                <iframe id="v1" width="420" height="315" src="https://www.youtube.com/embed/rmCXZ8ECRdE"></iframe>
-                <iframe id="v2" width="420" height="315" src="https://www.youtube.com/embed/BDZBmD62W_0"></iframe>
-            </div>
-        </div>
+        <br>
     </div>
 </body>
-<footer class="border-top footer text-muted box-shadow bg-light">
+<footer class="border-top footer-relative text-muted box-shadow bg-light">
     <div class="container">
         <p>2020 &copy; Sheet Music</p>
-        
     </div>
 </footer>
 
@@ -67,5 +62,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+<script src="js/piece.js"></script>
 
 </html>
