added searchResults page and connected index to piece

--- a/public/piece.html
+++ b/public/piece.html
@@ -35,14 +35,22 @@
         <h1 id="piece-name" class="text-center">Piece Name</h1>
         <br /><br />
         <div class="row">
-            <embed id="pdf" src= "./pdf/Friends-Sheet-Music-Anne-Marie-(SheetMusic-Free-com).pdf" width= "500" height= "600">
-            <ul id="list" style="list-style-type:square">
-                <li id="cpser">Composer: </li>
-                <li>Time uploaded: </li>
-                <li>Tags: </li>
-                <li>Stars: </li>
-                <li>Copyright: </li>
-            </ul>
+            <embed id="pdf" src= "./pdf/Friends-Sheet-Music-Anne-Marie-(SheetMusic-Free-com).pdf" width= "500" height= "600" />
+            <div class="row col-6">
+                <ul id="list" class="col-12">
+                    <li id="cpser">Composer: </li>
+                    <li>Time uploaded: </li>
+                    <li>Tags: </li>
+                    <li>Stars: </li>
+                    <li>Copyright: </li>
+                </ul>
+                <div id="review-div" class="col-12">
+                    <h3>Reviews</h3>
+                    <p>
+                        I think, therefore I am.
+                    </p>
+                </div>
+            </div>
         </div>
         <br>
     </div>
