--- a/public/searchResults.html
+++ b/public/searchResults.html
@@ -32,7 +32,7 @@
 </nav>
 <body class="text-dark bg-white">
     <div class="container">
-        <h1 class="text-center">Sheet Music</h1>
+        <h1 class="text-center">Search Results</h1>
         <br /><br />
         <div class="col-8 offset-2">
             <form method="POST">
@@ -42,16 +42,15 @@
                 </div>
             </form>
         </div>
-        <div class="videos">
-            <h3 id="trend" class="text-center">Trending</h3>
-            <div class="text-center">
-                <iframe id="v1" width="420" height="315" src="https://www.youtube.com/embed/rmCXZ8ECRdE"></iframe>
-                <iframe id="v2" width="420" height="315" src="https://www.youtube.com/embed/BDZBmD62W_0"></iframe>
-                <br><br>
-                <button id="view1" type="submit" class="btn btn-secondary col-2 offset-1">View Piece</button>
-                <button id="view2" type="submit" class="btn btn-secondary col-2 offset-1">View Piece</button>
-            </div>
-        </div>
+        <!--Use js to insert search results here. See piece.js for -->
+        <ul id="search-results">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
     </div>
 </body>
 <footer class="border-top footer text-muted box-shadow bg-light">
