added description to home page #firsthtmlworkever

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,14 @@
                 </div>
             </form>
         </div>
+        <div id="describe" class="description">
+            <h3 >Who are we?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium reiciendis facilis, 
+                beatae labore illum molestiae fugiat quidem id quia, vel minima perspiciatis est ratione 
+                modi, debitis eaque praesentium dignissimos incidunt? Lorem ipsum dolor sit amet consectetur, 
+                adipisicing elit. Tenetur, ex atque veniam laborum fugit beatae incidunt cupiditate explicabo, 
+                quis consequatur accusamus cumque dolorem perferendis natus dicta et ipsa minima numquam!</p>
+        </div i>
         <div class="videos">
             <h3 id="trend" class="text-center">Trending</h3>
             <div class="text-center">
