--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                 modi, debitis eaque praesentium dignissimos incidunt? Lorem ipsum dolor sit amet consectetur, 
                 adipisicing elit. Tenetur, ex atque veniam laborum fugit beatae incidunt cupiditate explicabo, 
                 quis consequatur accusamus cumque dolorem perferendis natus dicta et ipsa minima numquam!</p>
-        </div i>
+        </div>
         <div class="videos">
             <h3 id="trend" class="text-center">Trending</h3>
             <div class="text-center">
