--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
         <h1 class="text-center">Sheet Music</h1>
         <br /><br />
         <div class="col-8 offset-2">
-            <form method="POST">
+            <form action="/searchResults" method="POST">
                 <div class="row">
-                    <input type="text" class="form-control col-8" placeholder="Sheet, composer, piece...">
+                    <input type="text" class="form-control col-8" name="Title" placeholder="Sheet, composer, piece...">
                     <button type="submit" class="btn btn-primary col-3 offset-1">Search</button>
                 </div>
             </form>
