--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
 </head>
 <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3">
     <div class="container">
-        <a class="navbar-brand" href="./index.html">Sheet Music</a>
+        <a class="navbar-brand" href="./">Sheet Music</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,11 +21,11 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link" href="./">Home</a>
                 </li>
             </ul>
             <div>
-                <a class="float-right" href="./login.html">Sign In</a>
+                <a class="float-right" href="./login">Sign In</a>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
         </div>
         <br>
         <div>
-            <a href="./register.html"> Not registered? Join now!</a>
+            <a href="./register"> Not registered? Join now!</a>
         </div>
     </form>
 </body>
