--- a/public/register.html
+++ b/public/register.html
@@ -13,7 +13,7 @@
 </head>
 <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3">
     <div class="container">
-        <a class="navbar-brand" href="./index.html">Sheet Music</a>
+        <a class="navbar-brand" href="./">Sheet Music</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,11 +21,11 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link" href="./">Home</a>
                 </li>
             </ul>
             <div>
-                <a class="float-right" href="./login.html">Sign In</a>
+                <a class="float-right" href="./">Sign In</a>
             </div>
         </div>
     </div>
@@ -47,12 +47,12 @@
         </div>
         <div class="form-group">
             <label for="Password">Repeat Your Password</label>
-            <input type="password" class="form-control" name="Password" id="passwordInput" aria-describedby="Password"
+            <input type="password" class="form-control" name="PasswordRepeat" id="passwordInput" aria-describedby="Password"
                 placeholder="Password repeated">
         </div>
         <div class="form-group">
             <input type="checkbox" name="isComposer" value="isComposer" is="isComposer"> <label for="isComposer">Check if registering as a composer</label>
-        </div class="form-group">
+        </div>
         
         <div class="text-center">
             <button type="submit" class="btn btn-primary">Submit</button>
