--- a/public/searchResults.html
+++ b/public/searchResults.html
@@ -13,7 +13,7 @@
 </head>
 <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3">
     <div class="container">
-        <a class="navbar-brand" href="./index.html">Sheet Music</a>
+        <a class="navbar-brand" href="./">Sheet Music</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,11 +21,11 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link" href="./">Home</a>
                 </li>
             </ul>
             <div>
-                <a class="float-right" href="./login.html">Sign Out</a>
+                <a class="float-right" href="./">Sign Out</a>
             </div>
         </div>
     </div>
@@ -37,7 +37,7 @@
         <div class="col-8 offset-2">
             <form method="POST">
                 <div class="row">
-                    <input type="text" class="form-control col-8" placeholder="Sheet, composer, piece...">
+                    <input type="text" class="form-control col-8" name="Title" placeholder="Sheet, composer, piece...">
                     <button type="submit" class="btn btn-primary col-3 offset-1">Search</button>
                 </div>
             </form>
