Make logging out actually work

--- a/public/searchResults.html
+++ b/public/searchResults.html
@@ -25,7 +25,7 @@
                 </li>
             </ul>
             <div>
-                <a class="float-right" href="./">Sign Out</a>
+                <a class="float-right" href="./logout">Sign Out</a>
             </div>
         </div>
     </div>
